<resources>
    <string name="app_name">AndroidPay</string>
    <string name="settings">Account Settings</string>


    <string name="enter_your_mobile_address_and_password">Enter Your Mobile Number and Password</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="new_user_create_an_account">New user? Create an Account</string>
    <string name="create_an_account">Create an Account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="register">Register</string>

    <string name="enter_password">Enter password</string>
    <string name="enter_mobile">Enter mobile number</string>
    <string name="enter_lastname">Enter Lastname</string>
    <string name="enter_firstname">Enter Firstname</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="user_already_exit">User Already Exit</string>
    <string name="user_not_exist">User not found</string>
    <string name="logout">Logout</string>
    <string name="add_bank_account">Add Bank Account</string>
    <string name="full_name">Full Name</string>
    <string name="enter_fullname">Enter fullname</string>
    <string name="account_number">Account Number</string>
    <string name="enter_accountno">Enter AccountNo</string>
    <string name="ifsc_code">IFSC Code</string>
    <string name="enter_ifsc_code">Enter IFSC code</string>
    <string name="bank_name">Bank Name</string>
    <string name="select_bank">Enter Bank</string>
    <string name="pin">PIN</string>
    <string name="enter_4_digit_pin">Enter 4 Digit PIN</string>
    <string name="bank_account_alredy_linked_with_another_user">Bank Account Alredy Linked with Another User</string>
    <string name="balance">"Account Balance"</string>
    <string name="account_already_added">Account Already Added</string>
    <string name="pay">Pay</string>
    <string name="add_money">Add Money</string>
    <string name="please_add_bank_account">Please add bank account</string>
    <string name="amount_added_successfully">Amount Added Successfully</string>
    <string name="enter_upi">Enter UPI</string>
    <string name="upi">UPI</string>
    <string name="enter_remarks">Add a note (Optional)</string>
    <string name="please_login">Please Login</string>
    <string name="insufficient_balance">Insufficient Balance</string>
    <string name="amount_transfered_successfully">Amount transferred successFully</string>
    <string name="bank_account_added_successfully">Bank Account Added SuccessFully</string>
    <string name="amount_cannot_be_transferred_to_same_account">Amount cannot be transferred to same account</string>
    <string name="please_enter_valid_upi">Please Enter Valid UPI</string>
    <string name="you_are_exceeding_per_transaction_limit">You are exceeding per transaction limit</string>
    <string name="transfer_failed_amount_exceeds_receiver_s_limit">Transfer failed: Amount exceeds receiver\'s limit</string>
    <string name="unable_to_transfer_receiver_s_daily_transfer_limit_has_been_reached">Unable to transfer. Receiver\'s daily transfer limit has been reached</string>
    <string name="unable_to_transfer_your_daily_transfer_limit_has_been_reached">Unable to transfer. your daily transfer limit has been reached</string>
    <string name="verify">Verify</string>
    <string name="enter_pin">Enter Pin</string>
    <string name="invalid_pin">Invalid Pin</string>
    <string name="transfer_money">Transfer Money</string>
    <string name="my_information">My Information</string>
    <string name="transaction">Transaction</string>
    <string name="accounts">Bank Accounts</string>
    <string name="rupee_symbol">₹</string>
    <string name="profile">Profile</string>
    <string name="transactions_history">Transactions History</string>
    <string name="save">Save</string>
    <string name="per_transaction_limit">Per Transaction Limit</string>
    <string name="daily_transaction_limit">Daily Transaction Limit</string>
    <string name="enter_per_transaction_limit">Enter per transaction limit</string>
    <string name="enter_daily_transaction_limit">Enter daily transaction limit</string>
    <string name="daily_transaction_limit_must_be_greater_than_0">Daily transaction limit must be greater than 0</string>
    <string name="per_transaction_limit_must_be_greater_than_0">Per transaction limit must be greater than 0</string>
    <string name="send_money">Send Money</string>
    <string name="user_logged_in_successfully">User logged in successfully</string>
    <string name="user_registered_successfully">User registered successfully</string>

</resources>